# ContainerClaw

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  SELF.md  claw.sh  client.py  config.local.yaml.example  config.yaml  docker-compose.mlx.yml  docker-compose.sidecar.yml  docker-compose.swebench.yml  docker-compose.yml  mlx_batch_test.py  pyproject.toml
agent/: Dockerfile  apparmor-agent.profile  requirements.txt  seccomp-agent.json
agent/src/: agent.py  agent_context.py  agent_pb2.py  agent_pb2_grpc.py  commands.py  config.py  context.py  election.py  fluss_client.py  heartbeat.py  main.py  moderator.py  publisher.py  reconciler.py  sandbox.py  schemas.py  subagent_manager.py  tool_executor.py  tools.py
bridge/: Dockerfile  requirements.txt
bridge/proto/: agent.proto  agent_pb2.py  agent_pb2_grpc.py
bridge/src/: bridge.py
docs/: bug_1.md  bug_1_pt2.md  bug_1_pt3.md  bug_1_pt4.md  discord_api.md  discord_webhook.md  draft.md  draft_pt10.md  draft_pt11.md  draft_pt12.md  draft_pt13.md  draft_pt14.md  draft_pt14_review.md  draft_pt15.md  draft_pt15_review.md  draft_pt16.md  draft_pt16_walkthrough.md  draft_pt17.md  draft_pt17_pt1.md  draft_pt17_walkthrough.md  draft_pt18.md  draft_pt18_review.md  draft_pt19.md  draft_pt19_dag_rca.md  draft_pt19_review.md  draft_pt19_review_pt2.md  draft_pt19_review_pt3.md  draft_pt19_solution_proposal.md  draft_pt19_solution_proposal_pt2.md  draft_pt19_solution_proposal_pt3.md  draft_pt19_solution_proposal_pt4.md  draft_pt19_solution_proposal_pt4_existing_logs.md  draft_pt19_solution_proposal_pt5.md  draft_pt19_solution_proposal_pt5_followup.md  draft_pt19_solution_proposal_pt6.md  draft_pt19_solution_proposal_pt7.md  draft_pt19_solution_proposal_pt7_existing_logs.md  draft_pt19_solution_proposal_pt7_existing_logs_pt2.md  draft_pt19_solution_proposal_pt7_rca.md  draft_pt19_solution_proposal_pt7_rca_pt2.md  (+48 more)
fluss/: Dockerfile  entrypoint.sh  flink-conf.yaml
fluss/src/: main.py
llm-gateway/: Dockerfile  gunicorn.conf.py
llm-gateway/src/: main.py
llm-gateway/src/providers/: __init__.py  gemini_strategy.py  openai_strategy.py
notebooks/: api_test.ipynb  mlx_test.ipynb  swe_bench_smoke_test.ipynb  swe_bench_smoke_test_5.ipynb  swe_bench_verified.ipynb  validate_dag.ipynb
proto/: agent.proto
ripcurrent/: Dockerfile  requirements.txt
ripcurrent/src/: fluss_helpers.py  main.py
scratch/: smoke_test_sidecar.py
scripts/: check_fluss.py  get_llm_info.py  inspect_dag.py  pressure_test.py  test_inference.py  validate_config.py  verify_agent.py
scripts/swe_bench/: evaluate.py  evaluator.py  instance_loader.py  requirements.txt  results.py  run.py  sitecustomize.py  stratified_swebench_verified_sample.py  trace_archiver.py  workspace_setup.py
scripts/swe_bench/.cache/: princeton-nlp_SWE-bench_Lite_test.json
scripts/swe_bench/results/: django__django-16379.json
scripts/swe_bench_v1/: create_gold_predictions.py  prediction_writer.py  requirements.txt  run.py  sitecustomize.py  trace_archiver.py  workspace_setup.py
secrets/: deepseek_api_key.txt  gemini_api_key.txt
shared/: __init__.py  config_loader.py  context_builder.py  spine_loader.py
telemetry/: Dockerfile  init_duckdb.sql  init_starrocks.sql  pom.xml  telemetry-config.yaml
telemetry/src/main/java/com/containerclaw/telemetry/: DagPipeline.java  DuckDBDialect.java  MetricsPipeline.java  SinkRegistrar.java  TelemetryConfig.java  TelemetryJob.java
tests/: test_gemini_strategy.py  verify_anchor_logic.py
ui/: .dockerignore  Dockerfile  bridge.Dockerfile  index.html  package-lock.json  package.json  style.css
ui/src/: App.tsx  api.ts  bridge.py  index.css
ui/src/components/: AnchorView.tsx  ChatroomView.tsx  ConchShellPanel.tsx  DagView.tsx  ExplorerView.tsx  MetricsView.tsx  ProjectBoard.tsx  SnorkelView.tsx
