[project]
name = "containerclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.4",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.3.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "brotli==1.2.0",
    "cbor2==5.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "chardet==7.4.1",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==46.0.6",
    "cycler==0.12.1",
    "datasets==4.8.4",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.4.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "docker==7.1.0",
    "executing==2.2.1",
    "fastapi==0.135.2",
    "fastcore==1.12.34",
    "fastjsonschema==2.21.2",
    "ffmpy==1.0.0",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "fqdn==1.5.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "ghapi==1.0.13",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "gradio==6.10.0",
    "gradio-client==2.4.0",
    "groovy==0.1.2",
    "grpclib==0.4.9",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-gradio==0.3.0",
    "hf-transfer==0.1.9",
    "hf-xet==1.4.2",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.8.0",
    "hyperframe==6.1.0",
    "identify==2.6.18",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipykernel==7.2.0",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "json5==0.14.0",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-client==8.8.0",
    "jupyter-console==6.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.5.0",
    "lark==1.3.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "maturin==1.12.6",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "miniaudio==1.61",
    "mistune==3.2.0",
    "mlx==0.31.1",
    "mlx-embeddings==0.1.0",
    "mlx-lm==0.31.2",
    "mlx-metal==0.31.1",
    "mlx-vlm==0.4.2",
    "modal==1.4.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nodeenv==1.10.0",
    "notebook==7.5.5",
    "notebook-shim==0.2.4",
    "numpy==2.4.3",
    "openai==2.30.0",
    "opencv-python==4.13.0.92",
    "orjson==3.11.7",
    "packaging==26.0",
    "pandas==3.0.1",
    "pandocfilters==1.5.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "pip==26.0.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==23.0.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pydub==0.25.1",
    "pyfluss",
    "pygments==2.19.2",
    "pyjwt==2.12.1",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.2.2",
    "python-dotenv==1.2.2",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.22",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.33.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "safehttpx==0.1.7",
    "safetensors==0.7.0",
    "scipy==1.17.1",
    "semantic-version==2.10.0",
    "send2trash==2.1.0",
    "sentencepiece==0.2.1",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "sse-starlette==3.3.4",
    "stack-data==0.6.3",
    "starlette==0.52.1",
    "swebench==4.1.0",
    "sympy==1.14.0",
    "synchronicity==0.12.2",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tokenizers==0.22.2",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.4.0",
    "typer==0.24.1",
    "types-certifi==2021.10.8.3",
    "types-toml==0.10.8.20240310",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "unidiff==0.7.5",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "virtualenv==21.2.0",
    "vllm-mlx",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
    "xxhash==3.6.0",
    "yarl==1.23.0",
]

[tool.uv.workspace]
members = [
    "vendor/fluss-rust/bindings/python",
]

[tool.uv.sources]
vllm-mlx = { git = "https://github.com/waybarrios/vllm-mlx.git", rev = "d235c37132640fadbf21c0d422602782228a1b50" }
pyfluss = { workspace = true }
